[gd_scene load_steps=6 format=2]

[ext_resource path="res://player/PlayerIcon.gd" type="Script" id=1]
[ext_resource path="res://ui/assets/icons/profile.png" type="Texture" id=2]
[ext_resource path="res://ui/assets/fonts/Montserrat-Black.ttf" type="DynamicFontData" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="PlayerIcon" type="Node2D"]
script = ExtResource( 1 )

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 1 )

[node name="PlayerNameLabel" type="Label" parent="."]
anchor_bottom = 1.0
margin_left = -91.0
margin_top = 69.0
margin_right = 89.0
margin_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 90, 20 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "PLAYER NAME"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
